templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: sampletest
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    deployment: sampletest
status:
  loadBalancer: {}
