templates/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: sampletest
spec:
  to:
    kind: Service
    name: sampletest
    weight: 100
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
